# ocr-offline

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: download_models.sh  run.sh
src/: app.py  generate_models.py  main.py
src/ocr_models/cyrillic_PP-OCRv3_mobile_rec/: inference.json  inference.yml
src/ocr_models/devanagari_PP-OCRv3_mobile_rec/: inference.json  inference.yml
src/ocr_models/japan_PP-OCRv3_mobile_rec/: inference.json
