[project]
name = "paddle-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "paddleocr[doc-parser]>=3.4.0",
    "paddlepaddle>=3.2.2",
    "numpy<2.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
